<resources>
    <string name="app_name">Spends</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="please_select">Please select</string>
    <string name="hello">Hello</string>
    <string name="total">Total</string>
    <string name="_0">null</string>
    <string name="targetwise">TargetWise</string>
    <string name="budget_pic">budget_pic</string>
    <string name="add_task">Add Task</string>
    <string name="refresh">Refresh</string>
    <string name="change_budget">Change Budget</string>
    <string name="calender">calender</string>
    <string name="Current_date">0 - 0 - 0000</string>
    <string name="about">About</string>
    <string name="about_text">This app is a project exclusively for the people who has no idea where they wasting their money.</string>
    <string name="settings">Settings</string>

    <string-array name="type_of_spends">

        <item>Grocery</item>
        <item>Toiletries</item>
        <item>Food and Dinning</item>
        <item>Transportation</item>
        <item>Clothing</item>
        <item>Personal Care</item>
        <item>Stationary</item>
        <item>Entertainment</item>
        <item>Sports and games</item>
        <item>Others</item>

    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="savings">Savings</string>

</resources>
