<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_task"
        android:icon="@drawable/add"
        android:title="@string/add_task"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/refresh"
        app:showAsAction="never"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/change_budget"
        app:showAsAction="never"
        android:title="@string/change_budget"/>

    <item
        android:id="@+id/calender"
        android:icon="@drawable/calendar"
        android:title="@string/calender"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/About"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>